# mermaid-parser

./: Cargo.toml
example-service/: .gitignore  .justfile  Cargo.toml  Cargo2.toml  README.md  test.txt
example-service/crates/example_service_bin/: Cargo.toml  README.md
example-service/crates/example_service_bin/src/: cli.rs  main.rs  settings.rs
example-service/crates/example_service_client/: Cargo.toml  README.md  build.rs
example-service/crates/example_service_client/src/: lib.rs
example-service/crates/example_service_core/: Cargo.toml  README.md  build.rs
example-service/crates/example_service_core/src/: conversion.rs  impl.rs  lib.rs
example-service/crates/example_service_core/tests/core/: lib.rs
example-service/crates/example_service_persistence/: Cargo.toml  README.md
example-service/crates/example_service_persistence/src/: impl.rs  lib.rs  settings.rs
example-service/crates/example_service_persistence/src/entities/: example.rs
example-service/crates/example_service_persistence/src/migrations/: baseline.rs
example-service/crates/example_service_persistence/tests/persistence/: lib.rs
example-service/crates/example_service_server/: Cargo.toml  README.md
example-service/crates/example_service_server/src/: lib.rs
example-service/crates/example_service_server/tests/server/: lib.rs
example-service/manifests/kreya/: example-service.krproj
example-service/manifests/kreya/example/service/ExampleService/: CreateExample-request.json  (+7 more)
example-service/proto/example/: service.proto
example-service/xtask/src/: main.rs
src/: lib.rs
(+2 files in other folders)
