[package]
name = "example_service_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example_service_persistence = { path = "../example_service_persistence" }

anyhow = "1.0"
prost = "0.9.0"
serde = {version = "1.0", features = ["serde_derive"] }
tonic = "0.6.2"
tracing = "0.1"
tracing-attributes = "0.1"

[dev-dependencies]
tokio = {version = "1.17.0", features = ["rt", "macros"]}

[[test]]
name = "core"
path = "tests/core/lib.rs"

[build-dependencies]
tonic-build = "0.6.2"